--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -21,8 +21,9 @@
     "@angular/router": "~11.2.14",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^10.2.0",
+    "ngx-bootstrap": "^7.1.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
